--- a/package.json
+++ b/package.json
@@ -2,10 +2,61 @@
   "name": "drift",
   "version": "0.1.0",
   "private": true,
+  "description": "Cinema-grade screen recording with auto-zoom",
+  "author": "Drift Team",
+  "main": "electron/main.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "electron-dev": "npx concurrently -k \"npx cross-env BROWSER=none npm run dev\" \"npx wait-on http://127.0.0.1:3000 && npx electron .\"",
+    "electron-build": "npm run build && npx electron-builder build --win --publish never"
+  },
+  "build": {
+    "appId": "com.drift.desktop",
+    "productName": "Drift",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "electron/**/*",
+      ".next/**/*",
+      "public/**/*",
+      "package.json",
+      "!src/**/*",
+      "!extension/**/*",
+      "!build/**/*"
+    ],
+    "win": {
+      "target": [
+        "nsis",
+        "portable"
+      ],
+      "icon": "build/icon.png"
+    },
+    "mac": {
+      "target": [
+        "dmg"
+      ],
+      "icon": "build/icon.png"
+    },
+    "linux": {
+      "target": [
+        "AppImage"
+      ],
+      "icon": "build/icon.png"
+    },
+    "compression": "store",
+    "asar": true,
+    "asarUnpack": [
+      "**/node_modules/uiohook-napi/**/*"
+    ],
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "installerIcon": "build/icon.png",
+      "uninstallerIcon": "build/icon.png"
+    }
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
@@ -19,13 +70,19 @@
     "react-dom": "19.2.3",
     "resend": "^6.7.0",
     "styled-components": "^6.2.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "uiohook-napi": "^1.5.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
     "babel-plugin-react-compiler": "1.0.0",
+    "concurrently": "^9.1.2",
+    "cross-env": "^7.0.3",
+    "electron": "^35.2.1",
+    "electron-builder": "24.13.3",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
-    "tw-animate-css": "^1.4.0"
+    "tw-animate-css": "^1.4.0",
+    "wait-on": "^8.0.3"
   }
 }
