remove beta download links temporarily

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "next build",
     "start": "next start",
     "electron-dev": "npx concurrently -k \"npx cross-env BROWSER=none npm run dev\" \"npx wait-on http://127.0.0.1:3000 && npx electron .\"",
-    "electron-build": "npm run build && npx electron-builder build --win --publish never"
+    "electron-build": "npx cross-env ELECTRON_BUILD=true next build && npx electron-builder build --win --publish never"
   },
   "build": {
     "appId": "com.drift.desktop",
@@ -20,12 +20,13 @@
     },
     "files": [
       "electron/**/*",
-      ".next/**/*",
+      ".next-electron/**/*",
       "public/**/*",
       "package.json",
       "!src/**/*",
       "!extension/**/*",
-      "!build/**/*"
+      "!build/**/*",
+      "!.next/**/*"
     ],
     "win": {
       "target": [
