feat: Major v0.1.0 release - macOS backgrounds, custom hotkeys, improved export quality
- Added 6 macOS-style gradient backgrounds (Big Sur, Monterey, Ventura, Bloom, Sonoma, Midnight)
- Added Mac title bar with traffic lights above video content
- Implemented custom hotkey settings (Ctrl+Shift+S/X default, user configurable)
- Improved recording quality: 15 Mbps bitrate, smaller timeslice
- Improved export quality: VP8 codec for smoother playback, 20 Mbps bitrate
- Fixed mic capture with echo cancellation and noise suppression
- Fixed hotkey handling when app is minimized
- Fixed export progress display
- Added CloudConvert link for MP4 conversion
- Removed FFmpeg WASM (too slow for practical use)
- Various UI polish and bug fixes

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "nsis",
         "portable"
       ],
-      "icon": "build/icon.png"
+      "icon": "build/icon.ico"
     },
     "mac": {
       "target": [
@@ -62,6 +62,8 @@
     }
   },
   "dependencies": {
+    "@ffmpeg/ffmpeg": "^0.12.15",
+    "@ffmpeg/util": "^0.12.2",
     "@radix-ui/react-slot": "^1.2.4",
     "@vercel/analytics": "^1.6.1",
     "class-variance-authority": "^0.7.1",
