--- a/package.json
+++ b/package.json
@@ -21,9 +21,6 @@
     "files": [
       "electron/**/*",
       ".next/**/*",
-      "node_modules/next/**/*",
-      "node_modules/react/**/*",
-      "node_modules/react-dom/**/*",
       "public/**/*",
       "package.json",
       "!src/**/*",
@@ -33,7 +30,7 @@
     "win": {
       "target": [
         "nsis",
-        "portable"
+        "zip"
       ],
       "icon": "build/icon.ico"
     },
