--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.562.0",
+    "mp4-muxer": "^5.2.2",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
